...
        android:id="@+id/homeButton"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="Home"
        app:showAsAction="always" />

    <item
        android:id="@+id/food_nearyby"
        android:icon="@drawable/ic_baseline_fastfood_24"
        android:title="Map"
        app:showAsAction="always"
        tools:showAsAction="always" />

    <item
        android:id="@+id/postButton"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Post"
        app:showAsAction="always"
        tools:showAsAction="always" />

    <item
        android:id="@+id/exploreButton"
        android:icon="@drawable/ic_baseline_explore_24"
        android:title="explore"
        app:showAsAction="always" />
    <item
        android:id="@+id/userProfile"
        android:icon="@drawable/ic_baseline_person_pin_24"
        android:title="Profile"
        app:showAsAction="always"
        tools:showAsAction="always" />
</menu>
