...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchCover"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/carView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:clickable="true"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation">
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_item_bck"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageOfPost"
                android:layout_width="0dp"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
...
                    android:textColor="#808080"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/distanceOfPost" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageOfOwner"
                    android:layout_width="50dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/captionOfPost"
...
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/imageOfOwner"
                    app:layout_constraintTop_toBottomOf="@+id/captionOfPost" />

                <ImageButton
                    android:id="@+id/followButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/search_item_bck"
                    app:layout_constraintBottom_toTopOf="@+id/nameOfOwner"
...
