...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.SearchFragment">

        <EditText
            android:id="@+id/searchBox"
            android:layout_width="335dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/search_bck"
            android:ems="10"
...
            android:inputType="textPersonName"
            android:textColor="#0B0A0A"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="53dp"
            android:layout_height="42dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/search_bck" />

        <ImageButton
            android:id="@+id/historyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:src="@drawable/ic_baseline_history_24"
            app:layout_constraintStart_toEndOf="@+id/searchBox"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBox" />
...
